--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -98,7 +98,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
             laboriosam ad deleniti.
           </p>
-          <button class="btn transparent">
+          <button class="btn transparent but">
             <a href="/sign">Sign In</a>
           </button>
         </div>
