--- a/public/css/Login & SignUp Page.css
+++ b/public/css/Login & SignUp Page.css
@@ -131,7 +131,10 @@ form.sign-in-form {
   color: #4481eb;
   border-color: #4481eb;
 }
-
+.but a{
+  color: white;
+  text-decoration: none;
+}
 .btn {
   width: 150px;
   background-color: #5995fd;
@@ -168,7 +171,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #4481eb 0%, #04befe 100%);
+  background-image: linear-gradient(-45deg, #1a2238 0%, #1a2238 100%);
   transition: 1.8s ease-in-out;
   border-radius: 50%;
   z-index: 6;
