--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -89,7 +89,7 @@
           </button>
           
         </div>
-        <img src="web shopping.svg" class="image" alt="" />
+        <img src="./images/p1.png" class="image" alt="" />
       </div>
       <div class="panel right-panel">
         <div class="content">
@@ -102,7 +102,7 @@
             <a href="/sign">Sign In</a>
           </button>
         </div>
-        <img src="selecting product.svg" class="image" alt="" />
+        <img src="./images/p2.png" class="image" alt="" />
       </div>
     </div>
   </div>
