--- a/templates/views/sign.hbs
+++ b/templates/views/sign.hbs
@@ -88,7 +88,7 @@
                         Sign up
                     </button>
                 </div>
-                <img src="web shopping.svg" class="image" alt="" />
+                <img src="./images/p1.png" class="image" alt="" />
             </div>
             <div class="panel right-panel">
                 <div class="content">
@@ -101,7 +101,7 @@
                         Sign in
                     </button>
                 </div>
-                <img src="selecting product.svg" class="image" alt="" />
+                <img src="./images/p2.png" class="image" alt="" />
             </div>
         </div>
     </div>
