--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -73,7 +73,7 @@
                     <div class="cards">
                          <div id="card-1">
                               <div class="dev-photo">
-                                   <img src="DevPhoto.webp" alt="">
+                                   <img src=".\images\DevPhoto.webp" alt="">
                               </div>
                               <div class="dev-details">
                                    <p id="dev-name">Name : Malay Patel</p>
@@ -84,7 +84,7 @@
                          </div>
                          <div id="card-2">
                               <div class="dev-photo">
-                                   <img src="DevPhoto.webp" alt="">
+                                   <img src=".\images\DevPhoto.webp" alt="">
                               </div>
                               <div class="dev-details">
                                    <p id="dev-name">Name : Meet Patel</p>
@@ -95,7 +95,7 @@
                          </div>
                          <div id="card-3">
                               <div class="dev-photo">
-                                   <img src="DevPhoto.webp" alt="">
+                                   <img src=".\images\DevPhoto.webp" alt="">
                               </div>
                               <div class="dev-details">
                                    <p id="dev-name">Name : Rudra Patel</p>
