add images to card

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -26,8 +26,8 @@
                </div>
                <div class="links">
                     <ul>
-                         <li id="Home"><a href="#Home.html">Home</a></li>
-                         <li id="AboutUS"><a href="#About Us.html">About Us</a></li>
+                         <li id="Home"><a href="http://localhost:8000/home">Home</a></li>
+                         <li id="AboutUS"><a href="http://localhost:8000/about">About Us</a></li>
                          <li id="Cart"><a href="#Cart.html">Cart</a></li>
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
