--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -24,23 +24,23 @@
                </div>
                <div class="links">
                     <ul>
-                         <li id="Home"><a href="#Home.html">Home</a></li>
-                         <li id="AboutUS"><a href="#About Us.html">About Us</a></li>
+                         <li id="Home"><a href="http://localhost:8000/home">Home</a></li>
+                         <li id="AboutUS"><a href="http://localhost:8000/about">About Us</a></li>
                          <li id="Cart"><a href="#Cart.html">Cart</a></li>
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
                </div>
           </div>
      <div id="carouselExample" class="carousel slide border border-primary border-5">
-  <div class="carousel-inner">
+  <div class="carousel-inner bg-dark">
     <div class="carousel-item active">
-      <img src="./images/p1.png" class="d-block w-100" alt="...">
+      <img src=".\images\DevPhoto.webp" class="d-block w-60 m-auto" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/p1.png" class="d-block w-100" alt="...">
+      <img src=".\images\DevPhoto.webp" class="d-block w-60 m-auto" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="./images/p1.png" class="d-block w-100" alt="...">
+      <img src=".\images\DevPhoto.webp" class="d-block w-60 m-auto" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
