--- a/templates/views/sign.hbs
+++ b/templates/views/sign.hbs
@@ -26,7 +26,7 @@
                         <input type="password" placeholder="Password" name="password" />
                     </div>
                     <input type="submit" value="Login" class="btn solid" />
-                    <p class="social-text">Or Sign in with social platforms</p>
+                    {{!-- <p class="social-text">Or Sign in with social platforms</p>
                     <div class="social-media">
                         <a href="#" class="social-icon">
                             <i class="fa-brands fa-facebook-f"></i>
@@ -40,7 +40,7 @@
                         <a href="#" class="social-icon">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>
+                    </div> --}}
                 </form>
                 <form action="#" class="sign-up-form" action="/login" method="POST">
                     <h2 class="title">Sign up</h2>
@@ -57,7 +57,7 @@
                         <input type="password" placeholder="Password" name="password" />
                     </div>
                     <input type="submit" class="btn" value="Sign up" />
-                    <p class="social-text">Or Sign up with social platforms</p>
+                    {{!-- <p class="social-text">Or Sign up with social platforms</p>
                     <div class="social-media">
                         <a href="#" class="social-icon">
                             <i class="fab fa-facebook-f"></i>
@@ -71,7 +71,7 @@
                         <a href="#" class="social-icon">
                             <i class="fab fa-linkedin-in"></i>
                         </a>
-                    </div>
+                    </div> --}}
                 </form>
             </div>
         </div>
