--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -11,25 +11,8 @@
     <title>Document</title>
 </head>
 <body>
-    
-    <div class="navbar">
-               <div class="logo">
-                    <img src="hlogo.png" alt="">
-                    <p id="companyName">Swipe Store</p>
-               </div>
-               <div class="hamburger">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-               </div>
-               <div class="links">
-                    <ul>
-                         <li id="Home"><a href="http://localhost:8000/home">Home</a></li>
-                         <li id="AboutUS"><a href="http://localhost:8000/about">About Us</a></li>
-                         <li id="Cart"><a href="#Cart.html">Cart</a></li>
-                         <li id="Profile"><a href="#Profile.html">Profile</a></li>
-                    </ul>
-               </div>
+    <div class="main">
+          {{>header}}
           </div>
      <div id="carouselExample" class="carousel slide border border-primary border-5">
   <div class="carousel-inner bg-dark">
@@ -51,6 +34,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+</div>
 </div>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="hamburger.js"></script>
