Minor changes and bootstrap removed

--- a/public/css/About Us.css
+++ b/public/css/About Us.css
@@ -222,7 +222,8 @@ hr {
     .hamburger .line {
         width: 30px;
         height: 3px;
-        background: #ffffff;
+        /* background: #ffffff; */
+        background: rgb(255, 84, 0);
         margin: 6px;
     }
 
