--- a/public/css/home.css
+++ b/public/css/home.css
@@ -105,6 +105,7 @@ body {
         width: 30px;
         height: 3px;
         background: #ffffff;
+        background: rgb(255, 84, 0);
         margin: 6px;
     }
 
