--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,8 +13,11 @@
 </head>
 
 <body>
+    
      <div class="main">
-          <div class="navbar">
+            {{>header}}
+     </div>
+          {{!-- <div class="navbar">
                <div class="logo">
                     <img src="hlogo.png" alt="">
                     <p id="companyName">Swipe Store</p>
@@ -32,7 +35,8 @@
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
                </div>
-          </div>
+          </div> --}}
+         
           <div class="about-us">
                <div class="AboutUs-title">
                     <h2>About Us</h2>
