--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -112,7 +112,7 @@
           </div>
      </div>
 
-     <script src="hamburger.js"></script>
+     <script src="./js/hamburger.js"></script>
 </body>
 
 </html>
