--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -12,9 +12,9 @@
     <title>Document</title>
 </head>
 <body>
-    {{!-- <div class="main">
+    <div class="main">
          {{>header}}
-         </div> --}}
+         </div>
 
    <ion-icon id="dislike" name="heart-dislike"></ion-icon>
   <div id="swiper">
