--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -41,6 +41,7 @@
     <script src="hamburger.js"></script> --}}
   <script src="./js/card.js"></script>
   <script src="./js/script.js"></script>
+  <script src="./js/hamburger.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
