--- a/templates/views/home.hbs
+++ b/templates/views/home.hbs
@@ -19,7 +19,7 @@
    <ion-icon id="dislike" name="heart-dislike"></ion-icon>
   <div id="swiper">
      {{!-- <div class="card" style="--i:0">
-      <img src="https://images.unsplash.com/photo-1721332154161-847851ea188b?q=80&w=1935&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+      <img src="../../public/images/nike.png" alt="">
     </div> --}}
     {{!-- <div class="card" style="--i:1">
       <img src="https://source.unsplash.com/random/1000x1000/?landscape" alt="">
