--- a/public/css/About Us.css
+++ b/public/css/About Us.css
@@ -1,4 +1,4 @@
-* {
+*{
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
@@ -6,7 +6,7 @@
 
 body {
     /* overflow-x: hidden; */
-    background-color: white;
+    background-color: #222;
     color: orangered;
 }
 
@@ -97,7 +97,7 @@ hr {
     font-weight: 400;
     padding: 0 12rem;
     margin: 2rem 0;
-    color: rgb(0, 0, 0);
+    color: #fff;
     line-height: 2.25rem;
 }
 
@@ -118,13 +118,13 @@ hr {
                      border: 3px solid blue;
   } */
 
-.cards {
+/* .cards {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
     padding: 1rem;
-    color: black;
+    color: #fff;
 }
 
 #card-1 {
@@ -178,7 +178,56 @@ hr {
     font-weight: 500;
     padding-left: 1rem;
     padding-top: 1rem;
+} */
+
+.container {
+    position: relative;
+    height: 30rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 1rem;
+    bottom: 2rem;
+    gap: 8rem;
+    flex-wrap: wrap;
 }
+
+.container .card {
+    position: relative;
+    width: 320px;
+    height: 400px;
+    background: rgba(45, 45, 45, 1);
+    border-radius: 20px;
+    overflow: hidden;
+    transition: background 0.3s ease-in-out;
+}
+
+.container .card::before {
+    content: '';
+    position: absolute;
+    top: var(--y, 50%);
+    left: var(--x, 50%);
+    transform: translate(-50%, -50%);
+    background: radial-gradient(circle, var(--clr), transparent 60%);
+    width: 700px;
+    height: 700px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out, background 0.5s ease-in-out;
+}
+
+.container .card:hover::before {
+    opacity: 1;
+}
+
+.container .card::after {
+    content: '';
+    position: absolute;
+    inset: 2px;
+    border-radius: 18px;
+    background: rgba(45, 45, 45, 0.9);
+}
+
+
 
 @media only screen and (max-width:1320px) {
     .nav {
