--- a/public/css/home.css
+++ b/public/css/home.css
@@ -131,7 +131,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.25rem 3rem;
-    background-color: #1a2238;
+    background-color: #1d1c1c;
 }
 
 .logo {
