--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -13,6 +13,7 @@
                          <li id="Home"><a href="http://localhost:6500/home">Home</a></li>
                          <li id="AboutUS"><a href="http://localhost:6500/about">About Us</a></li>
                          <li id="Cart"><a href="http://localhost:6500/Cart">Cart</a></li>
+                         <li id="Cart"><a href="http://localhost:6500/login">Login</a></li>
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
 </div>
