--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -15,63 +15,37 @@
   <div class="container">
     <div class="forms-container">
       <div class="signin-signup">
-        <form action="#" class="sign-in-form" action="/sign" method="POST">
+        
+        <!-- Sign In Form -->
+        <form class="sign-in-form" action="/sign" method="POST">
           <h2 class="title">Sign in</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Username" name="email" />
+            <input type="email" placeholder="Email" name="email" required />
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" name="password" />
+            <input type="password" placeholder="Password" name="password" required />
           </div>
           <input type="submit" value="Login" class="btn solid" />
-          {{!-- <p class="social-text">Or Sign in with social platforms</p>
-          <div class="social-media">
-            <a href="#" class="social-icon">
-              <i class="fa-brands fa-facebook-f"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fa-brands fa-x-twitter"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fa-brands fa-google"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div> --}}
         </form>
-        <form action="#" class="sign-up-form" action="/login" method="POST">
+        
+        <!-- Sign Up Form -->
+        <form class="sign-up-form" action="/login" method="POST">
           <h2 class="title">Sign up</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
-            <input type="text" placeholder="Username" name="name" />
+            <input type="text" placeholder="Username" name="name" required />
           </div>
           <div class="input-field">
             <i class="fas fa-envelope"></i>
-            <input type="email" placeholder="Email" name="email" />
+            <input type="email" placeholder="Email" name="email" required />
           </div>
           <div class="input-field">
             <i class="fas fa-lock"></i>
-            <input type="password" placeholder="Password" name="password" />
+            <input type="password" placeholder="Password" name="password" required />
           </div>
           <input type="submit" class="btn" value="Sign up" />
-          {{!-- <p class="social-text">Or Sign up with social platforms</p>
-          <div class="social-media">
-            <a href="#" class="social-icon">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-google"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-linkedin-in"></i>
-            </a>
-          </div> --}}
         </form>
       </div>
     </div>
@@ -79,27 +53,24 @@
     <div class="panels-container">
       <div class="panel left-panel">
         <div class="content">
-          <h3>New here ?</h3>
+          <h3>New here?</h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis,
-            ex ratione. Aliquid!
+            Sign up now and start your journey with us!
           </p>
           <button class="btn transparent" id="sign-up-btn">
             Sign up
           </button>
-          
         </div>
         <img src="./images/p1.png" class="image" alt="" />
       </div>
       <div class="panel right-panel">
         <div class="content">
-          <h3>One of us ?</h3>
+          <h3>One of us?</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
-            laboriosam ad deleniti.
+            Already have an account? Sign in to access your dashboard.
           </p>
-          <button class="btn transparent but">
-            <a href="/sign">Sign In</a>
+          <button class="btn transparent" id="sign-in-btn">
+            Sign In
           </button>
         </div>
         <img src="./images/p2.png" class="image" alt="" />
