--- a/public/css/About Us.css
+++ b/public/css/About Us.css
@@ -335,7 +335,7 @@ hr {
     }
 
     .links.active {
-        height: 10rem;
+        height: auto;
         background-color: #1a2238;
     }
 
@@ -405,7 +405,7 @@ hr {
     }
 
     .links .active {
-        height: 10rem;
+        height: auto;
         background-color: #1a2238;
     }
 
