--- a/public/css/style.css
+++ b/public/css/style.css
@@ -183,7 +183,7 @@ body {
   }
 
   .links.active {
-      height: 10rem;
+      height: auto;
       background-color: #1a2238;
   }
 
@@ -238,7 +238,7 @@ body {
   }
 
   .links.active {
-      height: 10rem;
+      height: auto;
       background-color: #1a2238;
   }
 
