--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -12,12 +12,14 @@
                     <ul>
                          <li id="Home"><a href="home">Home</a></li>
                          <li id="AboutUS"><a href="about">About Us</a></li>
-                         <li id="Cart"><a href="Cart">Cart</a></li>
+                         <li id="Cart"><a href="#Cart">Cart</a></li>
                          <li id="Cart"><a href="login">Login</a></li>
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
 </div>
 
+<div class="cart">
+     </div>
 <div class="profile">
      <img src="./images/DevPhoto.webp" alt="">
      <div class="user_detail">
