--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -13,13 +13,24 @@
                          <li id="Home"><a href="home">Home</a></li>
                          <li id="AboutUS"><a href="about">About Us</a></li>
                          <li id="Cart"><a href="#Cart">Cart</a></li>
-                         <li id="Cart"><a href="login">Login</a></li>
+                         <li id="login"><a href="login">Login</a></li>
                          <li id="Profile"><a href="#Profile.html">Profile</a></li>
                     </ul>
 </div>
 
 <div class="cart">
+     <div class="cartinfo">
+          <p> Shoe </p>
+          <p>Rs.4543</p>
+          <p>1</p>
+          <button>+</button>
+          <button>-</button>
+          <button>Delete</button>
      </div>
+     <div class="buy">
+          <button>Place Order</button>
+     </div>
+</div>
 <div class="profile">
      <img src="./images/DevPhoto.webp" alt="">
      <div class="user_detail">
