--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -28,6 +28,7 @@
           <button>Delete</button>
      </div>
      <div class="buy">
+          <p>Total : <span>0</span></p>
           <button>Place Order</button>
      </div>
 </div>
