--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,38 @@
 <body>
     
      <div class="main">
-            {{>header}}
+           <div class="navbar">
+               <div class="logo">
+                    <img src="hlogo.png" alt="">
+                    <p id="companyName">Swipe Store</p>
+               </div>
+               <div class="hamburger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+               </div>
+               <div class="links">
+                    <ul>
+                         <li id="Home"><a href="home">Home</a></li>
+                         <li id="AboutUS"><a href="about">About Us</a></li>
+                         {{!-- <li id="Cart"><a href="#Cart">Cart</a></li> --}}
+                         <li id="login"><a href="login">Login</a></li>
+                         <li id="Profile"><a href="#Profile.html">Profile</a></li>
+                    </ul>
+</div>
+
+
+<div class="profile">
+     <img src="./images/DevPhoto.webp" alt="">
+     <div class="user_detail">
+          <div id="user_name">
+               <p>Name: <span>{{user.name}}</span></p>
+          </div>
+          <div id="user_email">
+               <p>Email: <span>{{user.email}}</span></p>
+          </div>
+     </div>
+</div>
      </div>
           {{!-- <div class="navbar">
                <div class="logo">
